objects/APTS_Approval_Rule_Matrix__c.object
<CustomObject>
    <description>Approval rule matrix stores routing rules that will be configured by country admin and it drives the Quotation &amp; Agreement approvals.</description>
    <fields>
        <fullName>APTS_Approval_Level__c</fullName>
        <label>Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Rule_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_CHF__c</fullName>
        <formula>TEXT(APTS_Country__c ) + TEXT( APTS_Sales_Organisation__c ) + (  APTS_LP_Local_Channel__r.APTS_Code__c ) + (   APTS_Sales_Office__r.PickList_Code__c  ) + APTS_GTV_Level_Code__c</formula>
        <label>Combined Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CLF__c</fullName>
        <formula>TEXT(APTS_Country__c ) + TEXT( APTS_Sales_Organisation__c ) + ( APTS_LP_Local_Channel__r.APTS_Code__c ) + ( APTS_Sales_Office__r.PickList_Code__c ) + APTS_GTV_Level_Code__c + TEXT ( APTS_Approval_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Level Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combined_Header_Fields__c</fullName>
        <formula>TEXT(APTS_Country__c ) + TEXT( APTS_Sales_Organisation__c ) + (  APTS_LP_Local_Channel__r.APTS_Code__c ) + (  APTS_LP_Sales_Office__r.APTS_Code__c  ) + APTS_GTV_Level_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Header Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country_ISO_code__c</fullName>
        <label>Country ISO code</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <inlineHelpText>Country name for which approval rule is created</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level_Code__c</fullName>
        <inlineHelpText>Code used for product at level3</inlineHelpText>
        <label>GTV Level Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Local_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Channel</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <errorMessage>Invalid Local Channel.</errorMessage>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Local Channel</value>
            </filterItems>
            <filterItems>
                <field>$User.Country</field>
                <operation>equals</operation>
                <valueField>APTS_Master_Picklist_Table__c.APTS_Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$User.APTS_Locale__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Approval Rule Matrix</relationshipLabel>
        <relationshipName>Approval_Rule_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick sales office code from master picklist table</inlineHelpText>
        <label>Sales Office</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Sales Office</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Country__c</field>
                <operation>equals</operation>
                <valueField>$User.Country</valueField>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$User.APTS_Locale__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Approval Rule Matrix (Sales Office)</relationshipLabel>
        <relationshipName>Approval_Rule_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Legacy_Rule_ID__c</fullName>
        <label>Legacy Rule ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel_Name__c</fullName>
        <label>Local Channel Name</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadristas CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribución General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integradores y EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMS CD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office_Name__c</fullName>
        <label>Sales Office Name</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LSO_Field_Entries__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$User.Country</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LSO_Field_Entries__c</referenceTo>
        <relationshipLabel>Approval Rule Matrix</relationshipLabel>
        <relationshipName>Approval_Rule_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_Discount__c</fullName>
        <label>Threshold Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <formula>APTS_Assigned_to__r.FirstName + &apos; &apos; +  APTS_Assigned_to__r.LastName</formula>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Approver_Level__c</fullName>
        <description>identifies the maximum number of approvals required for an agreement based on a certain combination. Internally used</description>
        <label>Max Approver Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Rule Matrix</label>
    <listViews>
        <fullName>APTS_Spain_Approval_Rules</fullName>
        <columns>NAME</columns>
        <columns>APTS_Sales_Organisation__c</columns>
        <columns>APTS_CHF__c</columns>
        <columns>APTS_LP_Local_Channel__c</columns>
        <columns>APTS_LP_Sales_Office__c</columns>
        <columns>APTS_GTV_Level_Code__c</columns>
        <columns>APTS_Is_Active__c</columns>
        <columns>APTS_Threshold_Discount__c</columns>
        <columns>APTS_Approval_Level__c</columns>
        <columns>APTS_Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <filters>
            <field>APTS_LP_Sales_Office__c</field>
            <operation>equals</operation>
            <value>Z242 - BT/Niessen Navarra</value>
        </filters>
        <filters>
            <field>APTS_GTV_Level_Code__c</field>
            <operation>equals</operation>
            <value>00M02</value>
        </filters>
        <label>Spain Approval Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARM-{00000000}</displayFormat>
        <label>Approval Rule Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rule Matrix</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APTS_Check_Threshold_Discount</fullName>
        <active>false</active>
        <errorConditionFormula>IF(APTS_Threshold_Discount__c &gt;1,true,false)</errorConditionFormula>
        <errorMessage>Threshold Discount can not be more than 100 %</errorMessage>
    </validationRules>
</CustomObject>